ET Framework Setup
Inclass notes 9/12/2014

--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -10,6 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite-f8a8e903-cc47-4640-b37e-ea47044cf6cb;AttachDbFilename=|DataDirectory|\aspnet-WebSite-f8a8e903-cc47-4640-b37e-ea47044cf6cb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="EatIn" 
+         connectionString="Data Source=.;Intitial Catalog=eResturant;Integrated Security=true;" 
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
@@ -75,6 +78,10 @@
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <contexts>
+      <context type="eRestaurant.DAL.RestaurantContext, eRestaurant"
+        disableDatabaseInitialization="true"/>
+    </contexts>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
