--- a/eResaurant/eResaurant.csproj
+++ b/eResaurant/eResaurant.csproj
@@ -48,9 +48,14 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="DAL\ResturantContext.cs" />
+    <Compile Include="Entities\Bill.cs" />
+    <Compile Include="Entities\BillItem.cs" />
+    <Compile Include="Entities\Item.cs" />
+    <Compile Include="Entities\MenuCategory.cs" />
     <Compile Include="Entities\Reservation.cs" />
     <Compile Include="Entities\SpecialEvent.cs" />
     <Compile Include="Entities\Table.cs" />
+    <Compile Include="Entities\Waiter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
