--- a/eResaurant/eResaurant.csproj
+++ b/eResaurant/eResaurant.csproj
@@ -46,8 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\RestaurantAdminController.cs" />
     <Compile Include="Class1.cs" />
-    <Compile Include="DAL\ResturantContext.cs" />
+    <Compile Include="DAL\RestaurantContext.cs" />
     <Compile Include="Entities\Bill.cs" />
     <Compile Include="Entities\BillItem.cs" />
     <Compile Include="Entities\Item.cs" />
