--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite-f8a8e903-cc47-4640-b37e-ea47044cf6cb;AttachDbFilename=|DataDirectory|\aspnet-WebSite-f8a8e903-cc47-4640-b37e-ea47044cf6cb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
     <add name="EatIn" 
-         connectionString="Data Source=.;Intitial Catalog=eResturant;Integrated Security=true;" 
+         connectionString="Data Source=.;Initial Catalog=eResturant;Integrated Security=true;" 
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
