--- a/eRestaurant.Requirements/eRestaurant.Requirements.csproj
+++ b/eRestaurant.Requirements/eRestaurant.Requirements.csproj
@@ -63,13 +63,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\eResaurant\eRestaurant.csproj">
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\eRestaurant\eRestaurant.csproj">
       <Project>{41f71a97-685f-40ed-ac17-04afc54267d4}</Project>
       <Name>eRestaurant</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
