--- a/eRestaurant/eRestaurant.csproj
+++ b/eRestaurant/eRestaurant.csproj
@@ -46,15 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\AdHocController.cs" />
     <Compile Include="BLL\MenuController.cs" />
     <Compile Include="BLL\ReportController.cs" />
     <Compile Include="BLL\RestaurantAdminController.cs" />
+    <Compile Include="BLL\SeatingController.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="DAL\RestaurantContext.cs" />
     <Compile Include="Entities\Bill.cs" />
     <Compile Include="Entities\BillItem.cs" />
     <Compile Include="Entities\DTOs\Category.cs" />
     <Compile Include="Entities\DTOs\MenuItem.cs" />
+    <Compile Include="Entities\DTOs\ReservationCollection.cs" />
+    <Compile Include="Entities\DTOs\ReservationSummary.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\MenuCategory.cs" />
     <Compile Include="Entities\POCOs\CategorizedItemSale.cs" />
