--- a/WebSite/Web.config
+++ b/WebSite/Web.config
@@ -9,8 +9,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite-f8a8e903-cc47-4640-b37e-ea47044cf6cb;AttachDbFilename=|DataDirectory|\aspnet-WebSite-f8a8e903-cc47-4640-b37e-ea47044cf6cb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="EatIn" connectionString="Data Source=.;Initial Catalog=eRestaurant;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         connectionString="Data Source=.;Initial Catalog=eRestaurant;Integrated Security=true;"
+         providerName="System.Data.SqlClient" />
+    <add name="EatIn" 
+         connectionString="Data Source=.;Initial Catalog=eRestaurant;Integrated Security=true;" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <httpHandlers>
